--- a/main.tex
+++ b/main.tex
@@ -73,7 +73,7 @@ titlepage,numbers=noenddot,%1headlines,
 \newcommand{\myUni}{University of Sussex\xspace}
 \newcommand{\myLocation}{Hove\xspace}
 \newcommand{\myTime}{March 2021\xspace}
-\newcommand{\myVersion}{Thesis v0.3}
+\newcommand{\myVersion}{Thesis v0.4}
 
 % ********************************************************************
 % Setup, finetuning, and useful commands
@@ -446,12 +446,12 @@ titlepage,numbers=noenddot,%1headlines,
 
 \AtBeginDocument{\renewcommand{\thepart}{\Roman{part}}}
 
-\includeonly{ch/2-related-work}
+% \includeonly{ch/2-related-work}
 % ********************************************************************
 % GO!GO!GO! MOVE IT!
 %*******************************************************
 \begin{document}
-\frenchspacing
+% \frenchspacing
 \raggedbottom
 % \selectlanguage{american} % american ngerman
 %\renewcommand*{\bibname}{new name}
