--- a/allreferences.bib
+++ b/allreferences.bib
@@ -2211,3 +2211,28 @@
   pages		= {2223--2232},
   year		= {2017}
 }
+
+@inproceedings{ roh2021fairbatch,
+title={FairBatch: Batch Selection for Model Fairness},
+author={Yuji Roh and Kangwook Lee and Steven Euijong Whang and Changho Suh},
+booktitle={International Conference on Learning Representations},
+year={2021},
+url={https://openreview.net/forum?id=YNnpaAKeCfx}
+}
+
+@inproceedings{ khalifa2021distributional,
+title={A Distributional Approach to Controlled Text Generation},
+author={Muhammad Khalifa and Hady Elsahar and Marc Dymetman},
+booktitle={International Conference on Learning Representations},
+year={2021},
+url={https://openreview.net/forum?id=jWkw45-9AbL}
+}
+
+@inproceedings{stiennon2020learning,
+ author = {Stiennon, Nisan and Ouyang, Long and Wu, Jeffrey and Ziegler, Daniel and Lowe, Ryan and Voss, Chelsea and Radford, Alec and Amodei, Dario and Christiano, Paul F},
+ booktitle = {Advances in Neural Information Processing Systems},
+ pages = {3008--3021},
+ title = {Learning to summarize with human feedback},
+ volume = {33},
+ year = {2020}
+}
